# AP1_Project

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  commands.h  minCircle.cpp  standardIO.h  timeseries.h
